2012-03-01  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (sem_error, file_err): Bugfix: pull text formatted source
	location using source_loc_str rather than raw object using source_loc.

2012-03-01  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (v_load): Fixed broken functionality. Failing to evaluate
	directives following the load and consume input properly.
	Check for errors during the parse and throw an exception.

2012-03-01  Kaz Kylheku  <kaz@kylheku.com>

	Fixing two instances of unintentional O(n*n) behavior and poor memory use
	that occur in horizontal matching of basic text patterns.

	* lib.c (match_str, match_str_tree): New functions.

	* lib.h (match_str, match_str_tree): Declared.

	* match.c (do_match_line): Use match_str_tree and match_str when matching
	strings and string lists, respectively, rather than stupidly calling
	search functions and then asserting that the match was found at the
	starting position.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (do_match_line): Function takes new argument, "completely".
	The check for completely matching a line is now done within
	do_match_line.
	(match_line): Pass nil to do_match_line, specifying that a prefix
	match is okay.
	(match_line_completely): New interface to do_match_line, which
	requests a match to the end of the line.
	(v_freeform): Pass nil to do_match_line: freeform needs 
	incomplete match semantics.
	(match_files): Use match_line_completely instead of match_line.
	By doing it this way, we do not need to compute the length of
	the original line and compare it to the absolute position.
	This saves time and memory since computing the length of a lazy
	string forces it.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>

	* match.c (consume_prefix): This memory optimization should only
	be done for lazy strings, otherwise it just causes unnecessary
	memory use by duplicating the line, and inefficiency via
	thanks to allocator churn.

2012-02-28  Kaz Kylheku  <kaz@kylheku.com>
